--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "firedragon"]
 	path = firedragon
 	url = https://gitlab.com/garuda-linux/firedragon/builder.git
+[submodule "zen-browser"]
+	path = zen-browser
+	url = https://github.com/zen-browser/desktop
